--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <link rel="icon" type="image/png+xml" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Noel Wilson</title>
+    <!--app-head-->
   </head>
   <body>
-    <div id="root"><!--ssr-outlet--></div>
+    <div id="root"><!--app-html--></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
